// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/react-virtualized-renderers/filePathCellRenderer should render a FilePathCell when all fields are available 1`] = `
<span
  className="FilePathCell"
>
  <FileIcon
    extension="jpg"
  />
  <Breadcrumb
    label="contentPath"
  >
    <span
      className="FilePathCell-breadcrumbName"
      key="0"
    >
      YouFooMe
    </span>
    <span
      className="FilePathCell-breadcrumbName"
      key="1"
    >
      CooMooFoo
    </span>
    <span
      className="FilePathCell-breadcrumbName"
      key="2"
    >
      fancy.jpg
       (123 Bytes)
    </span>
  </Breadcrumb>
</span>
`;

exports[`features/react-virtualized-renderers/filePathCellRenderer should render a FilePathCell when it is external file and all files 1`] = `
<span
  className="FilePathCell is-external"
>
  <FileIcon
    extension="jpg"
  />
  <Breadcrumb
    label="contentPath"
  >
    <span
      className="FilePathCell-breadcrumbName"
      key="0"
    >
      <FormattedMessage
        defaultMessage="All Files"
        id="boxui.validation.allFiles"
      />
    </span>
    <span
      className="FilePathCell-breadcrumbName"
      key="1"
    >
      <FormattedMessage
        defaultMessage="External File"
        id="boxui.validation.externalFile"
      />
    </span>
    <span
      className="FilePathCell-breadcrumbName"
      key="2"
    >
      <FormattedMessage
        defaultMessage="External File"
        id="boxui.validation.externalFile"
      />
       (123 Bytes)
    </span>
  </Breadcrumb>
</span>
`;

exports[`features/react-virtualized-renderers/filePathCellRenderer should render a FilePathCell when only id is available 1`] = `
<span
  className="FilePathCell"
>
  <FileIcon
    extension=""
  />
  <Breadcrumb
    label="contentPath"
  >
    <span
      className="FilePathCell-breadcrumbName"
      key="0"
    >
      123
    </span>
  </Breadcrumb>
</span>
`;
